feat: add list command
Added a command to list all available sounds.
In order to make this, modified the bot type to "CommandBot" and
used the build-in command library.

--- a/config.sample.json
+++ b/config.sample.json
@@ -2,5 +2,6 @@
   "debug": false,
   "token": "Bot's token",
   "client_id": 608681843570507833,
-  "prefix": "92:"
+  "prefix": "92:",
+  "color": 1060081
 }
