feat: add custom status
Added the possibility to change bot's status. Therefore, anyone who want
to host the bot can easily change this parameter.

--- a/config.sample.json
+++ b/config.sample.json
@@ -4,5 +4,6 @@
   "sounds_dir": "sounds",
   "client_id": 608681843570507833,
   "prefix": "92:",
-  "color": 1060081
+  "color": 1060081,
+  "status": "tirer sur la daronne"
 }
