--- a/config.sample.json
+++ b/config.sample.json
@@ -1,9 +1,16 @@
 {
   "debug": false,
-  "token": "Bot's token",
-  "sounds_dir": "sounds",
-  "client_id": 608681843570507833,
-  "prefix": "92:",
-  "color": 1060081,
-  "status": "tirer sur la daronne"
+  "bot": {
+    "token": "Bot's token",
+    "id": 608681843570507833,
+    "commands_prefix": "92:"
+  },
+  "sounds": {
+    "folder": "sounds",
+    "format": "mp3"
+  },
+  "customization": {
+    "color": 1060081,
+    "status": "tirer sur la daronne"
+  }
 }
